spec/fixtures/layout/invalid/child.erb
child line 1
<%= break_me_in_child %>
child line 3
